--- a/.github/workflows/build-firebase.yml
+++ b/.github/workflows/build-firebase.yml
@@ -13,7 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1 # This is optional on linux and macOS
+    - uses: actions/setup-node@v3 # This is optional on linux and macOS
+      with:
+        node-version: 16
     - uses: pocket-apps/action-setup-firebase@v2
       with:
         firebase-token: ${{secrets.FIREBASE_TOKEN}}
