--- a/.github/workflows/build-firebase.yml
+++ b/.github/workflows/build-firebase.yml
@@ -29,17 +29,17 @@ jobs:
     - name: build debug 
       run: ./gradlew bundleDebug
     - name: upload debug artifact to Firebase App Distribution
-      run: firebase appdistribution:distribute app/build/outputs/bundle/debug/app-debug.aab --token ${{secrets.FIREBASE_TOKEN}} --app ${{secrets.FIREBASE_APP_ID}} --groups "trusted-testers" --release-notes "Test server"
+      run: firebase appdistribution:distribute app/build/outputs/bundle/debug/app-debug.apk --token ${{secrets.FIREBASE_TOKEN}} --app ${{secrets.FIREBASE_APP_ID}} --groups "trusted-testers" --release-notes "Test server"
 
     - name: build stage 
       run: ./gradlew bundleStage
     - name: upload stage artifact to Firebase App Distribution
-      run: firebase appdistribution:distribute app/build/outputs/bundle/stage/app-stage.aab --token ${{secrets.FIREBASE_TOKEN}} --app ${{secrets.FIREBASE_APP_ID}} --groups "trusted-testers" --release-notes "Stage server"
+      run: firebase appdistribution:distribute app/build/outputs/bundle/stage/app-stage.apk --token ${{secrets.FIREBASE_TOKEN}} --app ${{secrets.FIREBASE_APP_ID}} --groups "trusted-testers" --release-notes "Stage server"
       
     - name: build release 
       run: ./gradlew bundleRelease
     - name: upload release artifact to Firebase App Distribution
-      run: firebase appdistribution:distribute app/build/outputs/bundle/release/app-release.aab --token ${{secrets.FIREBASE_TOKEN}} --app ${{secrets.FIREBASE_APP_ID}} --groups "trusted-testers" --release-notes "Release server"
+      run: firebase appdistribution:distribute app/build/outputs/bundle/release/app-release.apk --token ${{secrets.FIREBASE_TOKEN}} --app ${{secrets.FIREBASE_APP_ID}} --groups "trusted-testers" --release-notes "Release server"
 
     - name: action-slack
       uses: 8398a7/action-slack@v3.8.0
