--- a/.github/workflows/build-firebase.yml
+++ b/.github/workflows/build-firebase.yml
@@ -27,7 +27,7 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: build debug 
-      run: ./gradlew bundleDebug
+      run: ./gradlew assembleDebug
     - name: upload debug artifact to Firebase App Distribution
       run: firebase appdistribution:distribute app/build/outputs/bundle/debug/app-debug.apk --token ${{secrets.FIREBASE_TOKEN}} --app ${{secrets.FIREBASE_APP_ID}} --groups "trusted-testers" --release-notes "Test server"
 
